--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,12 @@
-name: Create and publish a package
+name: Build image
 on:
-  push:
+  pull_request:
     branches:
       - main
       - 'release**'
+env:
+  SERVICE: tks-contract
+  TAG: ${{github.sha}}
 
 jobs:
   build-and-push-image:
@@ -16,16 +19,15 @@ jobs:
       uses: docker/setup-buildx-action@v1
 
     - name: Login to DockerHub
-      uses: docker/login-action@v1 
+      uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     
-    - name: Build and push
+    - name: build image
       id: docker_build
       uses: docker/build-push-action@v2
       with:
-        push: true
-        tags: sktcloud/tks-contract:latest
-        build-args: |
-          PRV_GITHUB_TOKEN=${{ secrets.PRV_GITHUB_TOKEN }}
+        push: false
+        tags: |
+          sktcloud/${{env.SERVICE}}:${{env.TAG}}
